added the header comments

--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+
+    <!--
+    Name: Nezar Mazraie
+    File: index.html
+    Date: February 12th 2025
+    Description: A tutorial to make a box with some shading color and some other things
+    -->
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Cool box</title>
