linked the css file and adjusted the background look

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>Cool box</title>
     <!-- your css link goes here -->
+    <link rel="stylesheet" href="styling.css">
   </head>
   <body>
     <div>This is a cool box</div>
